objects/IntegratedListingSearch__dlm/IntegratedListingSearch__dlm.object-meta.xml
<CustomObject>
    <label>物件検索用統合オブジェクト</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>物件検索用統合オブジェクト</labelOverride>
        <masterLabel>物件検索用統合オブジェクト</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>