objects/IntegratedListingSearch__dlm/fields/Area_Size__c.field-meta.xml
<CustomField>
    <fullName>Area_Size__c</fullName>
    <label>Area Size</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Area Size</labelOverride>
        <masterLabel>Area Size</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>