objects/IntegratedListingSearch__dlm/fields/Building_Description_AI__c.field-meta.xml
<CustomField>
    <fullName>Building_Description_AI__c</fullName>
    <label>Building Description AI</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Building Description AI</labelOverride>
        <masterLabel>Building Description AI</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>