objects/IntegratedListingSearch__dlm/fields/Building_ID__c.field-meta.xml
<CustomField>
    <fullName>Building_ID__c</fullName>
    <label>Building ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Building ID</labelOverride>
        <masterLabel>Building ID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>