objects/IntegratedListingSearch__dlm/fields/Built_Year__c.field-meta.xml
<CustomField>
    <fullName>Built_Year__c</fullName>
    <label>Built Year</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Built Year</labelOverride>
        <masterLabel>Built Year</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>