objects/IntegratedListingSearch__dlm/fields/Combined_Search_Text__c.field-meta.xml
<CustomField>
    <fullName>Combined_Search_Text__c</fullName>
    <label>Combined Search Text</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Combined Search Text</labelOverride>
        <masterLabel>Combined Search Text</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>