objects/IntegratedListingSearch__dlm/fields/Floor_Plan__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan__c</fullName>
    <label>Floor Plan</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Floor Plan</labelOverride>
        <masterLabel>Floor Plan</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>