objects/IntegratedListingSearch__dlm/fields/KQ_Listing_Id__c.field-meta.xml
<CustomField>
    <fullName>KQ_Listing_Id__c</fullName>
    <label>Key Qualifier Listing Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Listing Id</labelOverride>
        <masterLabel>Key Qualifier Listing Id</masterLabel>
        <refAttrDeveloperName>KQ_Listing_Id</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>