objects/IntegratedListingSearch__dlm/fields/Listing_Id__c.field-meta.xml
<CustomField>
    <fullName>Listing_Id__c</fullName>
    <label>Listing Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Listing Id</labelOverride>
        <masterLabel>Listing Id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>