objects/IntegratedListingSearch__dlm/fields/Nearest_Station__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Station__c</fullName>
    <label>Nearest Station</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Nearest Station</labelOverride>
        <masterLabel>Nearest Station</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>