objects/IntegratedListingSearch__dlm/fields/Room_Count__c.field-meta.xml
<CustomField>
    <fullName>Room_Count__c</fullName>
    <label>Room Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Room Count</labelOverride>
        <masterLabel>Room Count</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>