objects/IntegratedListingSearch__dlm/fields/SalesPoint_AI__c.field-meta.xml
<CustomField>
    <fullName>SalesPoint_AI__c</fullName>
    <label>SalesPoint AI</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SalesPoint AI</labelOverride>
        <masterLabel>SalesPoint AI</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>