objects/IntegratedListingSearch__dlm/fields/Walk_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Walk_Minutes__c</fullName>
    <label>Walk Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Walk Minutes</labelOverride>
        <masterLabel>Walk Minutes</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>